<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appmainbg"
    tools:context="kz.avtopylot.trezvod.avtopylot.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/trezvod_desc"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_rider_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"

        android:layout_marginTop="20dp"
        android:text="@string/bottom_slogan"
        android:textAlignment="center"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_rider_app"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_ib_background"
            android:text="@string/SignIn"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@drawable/register_btn_background"
            android:text="@string/Register"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
